# wxm_m5_flasher

./: .gitignore  CMakeLists.txt  README.md  const.h  esptool.cpp  esptool.h  esptool_state.h  firmware.cpp  firmware.h  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.rc  resources.qrc  struct.h
fw/: fw.json
